// Copyright (c) 2015 Monetas.
// Use of this source code is governed by an ISC
// license that can be found in the LICENSE file.

syntax="proto2";
option go_package="serialize";

// Message is a bitmessage. 
message Message {
	required Encoding  Payload     = 1;
	required bool      Sent        = 2;
	required bool      AckReceived = 3;
	required bool      AckExpected = 4;
	required string    From        = 5;
	optional string    To          = 6;
	optional string    Expiration  = 7;
	optional string    Ack         = 8;
	optional ImapData ImapData    = 9;
}

// ImapData is an entry in the database that contains a message and some related metadata.
message ImapData {
	required string DateReceived = 1;
	required int32  Flags        = 2;
}

// Encoding a bitmessage object payload. 
message Encoding {
	required uint64 Format   = 1;
	optional string Body     = 2;
	optional string Subject  = 3;
}